views: use shorter menu strings in Harmony website settings

The website settings dialog is supposed to use shorter strings
in Harmony mode.

BUG=657294

Review-Url: https://codereview.chromium.org/2715233004
Cr-Commit-Position: refs/heads/master@{#453710}

Former-commit-id: 73895a611399a7ed15be3b89c7dedc8cb2a3c7f6